# agents-skills

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  Justfile  README.md  registry.json  registry.schema.json
cli/: README.md  pyproject.toml  registry.json  registry.schema.json  tags.vocab.json
cli/src/agents_skills_cli/: __init__.py  core.py  http_client.py  main.py
docs/proposals/: cli-proposal.md
docs/research/: skill-builder-skills.md
scripts/: update-version-number.py
skills/: AGENTS.md
skills/generic/: AGENTS.md
skills/generic/create-agents-files/: SKILL.md
skills/generic/create-agents-files/references/: agents-spec.md  skills-spec.md  technical-writing.md
skills/generic/skill-creator/: README.md  SKILL.md
skills/generic/skill-creator/agents/: analyzer.md  comparator.md  grader.md
skills/generic/skill-creator/references/: schemas.md
