[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "agents-skills"
version = "0.1.0"
description = "Ergonomic CLI for installing and updating agent skills from registry.json"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "John Ziebro", email = "jziebro@insightt.io"}
]
keywords = ["cli", "agents", "skills", "typer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer[all]>=0.12.0,<1.0.0",
    "jsonschema>=4.21.1,<5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
agents-skills = "agents_skills_cli.main:main"

[tool.poetry]
name = "agents-skills"
version = "0.1.0"
description = "Ergonomic CLI for installing and updating agent skills from registry.json"
authors = ["Rapid Recovery Agency <dev@rapidd.io>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["cli", "agents", "skills", "typer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = ">=3.10"
typer = {version = ">=0.12.0", extras = ["all"]}
jsonschema = ">=4.21.1"
httpx = ">=0.27.0"

[tool.poetry.scripts]
agents-skills = "agents_skills_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_skills_cli"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.mypy]
disable_error_code = "attr-defined"
exclude = "^venv/"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.isort]
profile = "black"
line_length = 88
extra_standard_library = ["typing_extensions"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = ["agents_skills_cli"]
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "First Party"
import_heading_localfolder = "Relative First Party"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
length_sort = true
force_sort_within_sections = true
lines_after_imports = 2

[tool.coverage.run]
source = ["agents_skills_cli"]
omit = [
    ".*",
    "*/site-packages/*",
    "**/tests/*",
    "**/test_*.py",
    "**/*_test.py",
    "**/conftest.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__":',
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "class .*\\(.*Protocol\\):",
    "...",
]
show_missing = true
skip_covered = false
precision = 2
fail_under = 0

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Fast hermetic tests (no network, no real DB)",
    "integration: Tests using DB/redis/localstack (isolated)",
    "e2e: End-to-end tests (slow, full system)",
    "slow: Slow tests (>1 second)",
]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
ignore = [
    "B008",
    "D101",
    "E203",
    "E501",
    "S110",
    "S603",
    "F821",
    "UP037",
    "D100",
    "D103",
    "D104",
    "D107",
    "D203",
    "D213",
    "D105",
]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "PL",
    "B",
    "S",
    "C90",
    "D",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]
"src/agents_skills_cli/main.py" = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
from-first = false
length-sort = true
length-sort-straight = true
force-sort-within-sections = false
lines-between-types = 0
order-by-type = false
force-single-line = false
known-first-party = ["agents_skills_cli"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.mccabe]
max-complexity = 13
